[tool.poetry]
name = "adm_hw5"
version = "0.1.0"
description = ""
authors = ["micferr <micfer96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.3"
jupyter = "^1.0.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
